tools/gd/src/snapshots/gd__pager__tests__key_j_in_tree_next_entry.snap
---
source: gd/src/pager.rs
expression: "StateSnapshot::from(&state)"
---
StateSnapshot {
    cursor_line: 31,
    top_line: 30,
    active_file: None,
    tree_visible: true,
    tree_focused: true,
    tree_cursor: 1,
    mode: Normal,
    status_message: "",
    full_context: false,
    visual_anchor: 0,
}
