tools/gd/src/snapshots/gd__pager__tests__key_n_after_toggling_single_file_off_cycles_globally.snap
---
source: gd/src/pager.rs
expression: "StateSnapshot::from(&state)"
---
StateSnapshot {
    cursor_line: 36,
    top_line: 5,
    active_file: None,
    tree_visible: true,
    tree_focused: false,
    tree_cursor: 1,
    mode: Normal,
    status_message: "",
    full_context: false,
    visual_anchor: 0,
}
