tools/gd/src/snapshots/gd__pager__tests__key_next_file_no_active_file_does_not_stick.snap
---
source: gd/src/pager.rs
expression: "StateSnapshot::from(&state)"
---
StateSnapshot {
    cursor_line: 31,
    top_line: 11,
    active_file: None,
    tree_visible: true,
    tree_focused: false,
    tree_cursor: 1,
    mode: Normal,
    status_message: "",
    full_context: false,
    visual_anchor: 0,
}
